service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: go-web-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
